# Mole

./: .gitignore  Cargo.toml  ReadMe.md  license.md
_articles/: test copy.md  test.md
_include/: footer.html  head.html
_layouts/: default.html  page.html
src/: article.rs  cmds.rs  error.rs  include.rs  include_tag.rs  json_filter.rs  lib.rs  main.rs  parse.rs  util.rs
tests/: cli.rs
tests/resources/example1/_articles/: test copy 2.md  test copy.md  test.md
tests/resources/example1/_include/: head.html  header.html
tests/resources/example1/_layouts/: page.html
tests/resources/example1/_output/: contents page.html  give me all the dreamies.html  long page of text.html
tests/resources/example2/: index.md
tests/resources/example2/_articles/: test copy.md
tests/resources/example2/_layouts/: default.html  page.html
