[package]
name = "mole"
version = "0.1.0"
authors = ["Joe Ling"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid = "0.20.1"
pulldown-cmark = {version =  "0.7.2", default-features = false}
argh = "0.1.3"
log = "0.4"
simple_logger = "*"
grass = "0.9.5"
notify = "4.0.12"
tiny_http = "0.7"
mime_guess = "2"

[dev-dependencies]
assert_cmd = "0.12"
assert_fs = "0.13"
predicates = "1.0"
difference = "2.0"
# tempfile = "3"